cleaning up after long time

--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ APP_SECRET=6654e17030ad1ed72a68bd993c419cde
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-#Mailer activeted and uses these creadentials:
+#Mailer activated and uses these creadentials:
 #MAILER_DSN=smtp://budgete@b9sk.ru:see_.env.local@smtp.yandex.ru
 ###< symfony/mailer ###
 
